--- a/itds283_travel_naja_project/pubspec.yaml
+++ b/itds283_travel_naja_project/pubspec.yaml
@@ -1,4 +1,4 @@
-name: itds283_travel_naja_project
+name: itds283_travelnaja_flutter_application
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -37,7 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^4.4.2
   firebase_core: ^2.10.0
-  google_sign_in: ^6.1.0
+  animations: ^2.0.7
+  firebase_database: ^10.1.1
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
@@ -62,8 +64,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - assets/images/
+  # assets:
+  #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
